Bg images, base styles, and started header

--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
 <body>
   <div id="bodyDiv">
     <header>
-      <h1>sunnyside</h1>
+      <h2>sunnyside</h2>
         <!-- (A) MENU WRAPPER -->
-      <nav id="hamnav">
+      <nav id="hamNav">
         <!-- (B) THE HAMBURGER -->
         <label for="hamburger">&#9776;</label>
         <input type="checkbox" id="hamburger"/>
@@ -40,8 +40,9 @@
         </div>
       </nav>
 
-      <h2>WE ARE CREATIVES</h2>
-      <img src="images/mobile/image-header.jpg" alt="Bright orange slice">
+      <!--!---------------------------------------------------------------------TO DO: replace br with span?-->
+      <h1>WE ARE CREATIVES</h1>
+      <!-- <img src="images/mobile/image-header.jpg" alt="Bright orange slice"> -->
 
     </header>
     
@@ -103,7 +104,7 @@
     </main>
 
     <!--*Testimonials-->
-    <section>
+    <section id="testimonials">
 
       <h3>CLIENT TESTIMONIALS</h3>
 
@@ -154,7 +155,7 @@
     </section>
 
     <footer>
-      <h6>sunnyside</h6>
+      <h4>sunnyside</h4>
       <!--*Footer nav-->
       <ul>
         <li><a href="#">About</a></li>
@@ -171,30 +172,6 @@
       </ul>
 
     </footer>
-
-  
-
-
-
- 
-
-
-
-
-
-
-
-
-  Sunnyside’s enthusiasm coupled with their keen interest in our brand’s success made it a satisfying and enjoyable experience.
-  Thomas S.
-  Chief Operating Officer
-
- 
-
-  About
-  Services
-  Projects
-  Contact
 
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
